[package]
authors = ["xiaolanglang <2145773+xiaolanglanglang@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "stm32-temperature"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
nb = "0.1.2"
ssd1306 = "0.3.1"

[dependencies.embedded-graphics]
version = "0.6.0"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.stm32f1xx-hal]
version = "0.5.3"
features = ["rt", "stm32f103", "medium"]


[[bin]]
name = "stm32-temperature"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"

